--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "babel-eslint": "^7.1.1",
     "compression": "^1.6.2",
     "express": "^4.14.1",
-    "hbs": "^4.0.1"
+    "hbs": "^4.0.1",
+    "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.30.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
